Update binascii with base64

--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -67,6 +67,7 @@ wtf8 = "0.0.3"
 arr_macro = "0.1.2"
 csv = "1.1.1"
 paste = "0.1"
+base64 = "0.11"
 
 flame = { version = "0.2", optional = true }
 flamer = { version = "0.3", optional = true }
